--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,8 +17,13 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.x'
+    - name: 'Install Phantomjs'
+      run: |
+        wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2
+        tar -jxvf phantomjs-2.1.1-linux-x86_64.tar.bz2
+        sudo mv phantomjs-2.1.1-linux-x86_64/bin/phantomjs /usr/local/bin/phantomjs
     - name: 'Install dependencies'
-      run: python -m pip install --upgrade requests
+      run: python -m pip install --upgrade requests selenium
     - name: 'Get points'
       env:
         HOSTLOC_USERNAME: ${{ secrets.HOSTLOC_USERNAME }}
